Fix some bugs and implementing WebSocket.